--- a/exercises/TD01_prise_en_main/01_prise_en_main.ipynb
+++ b/exercises/TD01_prise_en_main/01_prise_en_main.ipynb
@@ -337,10 +337,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'int'>\n",
+      "<class 'float'>\n",
+      "<class 'str'>\n",
+      "<class 'int'>\n",
+      "<class 'float'>\n",
+      "<class 'int'>\n",
+      "<class 'bool'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(5))\n",
+    "print(type(5.0))\n",
+    "print(type(\"5\"))\n",
+    "print(type(-5))\n",
+    "print(type(5 / 2))\n",
+    "print(type(5 // 2))\n",
+    "print(type(5 == 2))\n",
+    "# erreur int sur int : print(type(5 = 2))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -357,10 +380,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'list'>\n",
+      "<class 'set'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# erreur : print(type(5,2))\n",
+    "print(type([5,2]))\n",
+    "print(type({5,2}))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -373,12 +409,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "le type de 3.141592653589793 est <class 'float'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "from math import pi\n",
+    "x = pi\n",
+    "print(\"le type de\", x , \"est\", type(x))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -392,10 +440,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "v = 100"
+   ]
   },
   {
    "cell_type": "markdown",
